# graphics

./: .gitignore  Makefile  README.md  alert.py  analysis.py  attempt.py  boilerplate.py  build_venv.sh  camera.py  clear_terminal.py  config.py  config.toml  decorator ideas.md  draw.py  draw_polygons.py  entity.py  fetch.py  geometry_pipeline.py  ignore.py  main.py  material.py  mermaid.md  mesh.py  object.py  pygame_test.py  pyproject.toml  ray_cast.py  render.py  rent.py  requirements.sh  requirements.txt  save_requirements.sh  scene.py  test.py  timer.py  tree.py  vector_math.py
markup/: pipeline.md
models/: attempt.py
mypackage/: pyproject.toml
scripts/: analysis.py  camera.py  draw.py  entity.py  fetch.py  geometry_pipeline.py  mesh.py  object.py  ray_cast.py  render.py  scene.py  timer.py  tree.py  vector_math.py
specifications/: mtl spec.txt
src/: main.py
src/scenes/: teapots.py
src/scripts/: attempt.py  camera.py  draw.py  entity.py  fetch.py  geometry_pipeline.py  material.py  mesh.py  object.py  ray_cast.py  render.py  scene.py  test_camera.py  vector_math.py  world.py
src/utilities/: analysis.py  clear_terminal.py  config.py  timer.py  tree.py  vectors.py
utilities/: analysis.py  tree.py
