[tool.poetry]
name = "graphics"
version = "0.1.0"
description = ""
authors = ["Logan Hillyer <shivastranded@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
numba = "^0.56.4"
pygame = "^2.3.0"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
